django-swag/django-swag/tj-nginx-example/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  annotations:
  labels:
    app: nginx
spec:
  selector:
    app: nginx
  ports:
  - name: "http-nginx"
    protocol: TCP
    targetPort: 80
    port: 80
